# sparc-embedded

./: README.md  client_interface.cpp  embedded.ino  types.h
sparc-embedded/: CMakeLists.txt  client_interface.h  const.h
sparc-embedded/hardware/: README.md
